--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Faking
-email: 
+email: fakingband@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Faking is noise
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -24,7 +24,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: 
+theme:
 plugins:
   - jekyll-feed
 
